--- a/tests/htdocs/index.html
+++ b/tests/htdocs/index.html
@@ -3,13 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Baobab Framework</title>
-		<!-- socket.io -->
-		<script src="/socket.io/socket.io.js" type="text/javascript"></script>
-		<!-- main.js -->
-		<script src="/common/main.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<p>test page.</p>
 		<p><a href="javascript:window.main.socketTest();">疎通確認</a></p>
+
+		<!-- socket.io -->
+		<script src="/socket.io/socket.io.js" type="text/javascript"></script>
+		<!-- baobab-fw -->
+		<script src="/baobab-fw/baobab-fw.js" type="text/javascript"></script>
+		<!-- main.js -->
+		<script src="/common/main.js" type="text/javascript"></script>
 	</body>
 </html>
