--- a/tests/htdocs/index.html
+++ b/tests/htdocs/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<p>test page.</p>
-		<p><a href="javascript:window.main.socketTest();">疎通確認</a></p>
+		<p><a href="javascript:;" onclick="window.main.socketTest(); return false;">疎通確認</a></p>
 
 		<!-- socket.io -->
 		<script src="/socket.io/socket.io.js" type="text/javascript"></script>
