--- a/tests/htdocs/index.html
+++ b/tests/htdocs/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Baobab Framework</title>
+		<title>biflora Framework</title>
 	</head>
 	<body>
 		<p>test page.</p>
@@ -12,7 +12,7 @@
 		<!-- socket.io -->
 		<script src="/socket.io/socket.io.js" type="text/javascript"></script>
 		<!-- baobab-fw -->
-		<script src="/baobab-fw/baobab-fw.js" type="text/javascript"></script>
+		<script src="/biflora/biflora.js" type="text/javascript"></script>
 		<!-- main.js -->
 		<script src="/common/main.js" type="text/javascript"></script>
 	</body>
