--- a/tests/htdocs/index.html
+++ b/tests/htdocs/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>biflora Framework</title>
+		<title>Baobab Framework</title>
 	</head>
 	<body>
 		<p>test page.</p>
@@ -11,7 +11,7 @@
 
 		<!-- socket.io -->
 		<script src="/socket.io/socket.io.js" type="text/javascript"></script>
-		<!-- baobab-fw -->
+		<!-- biflora -->
 		<script src="/biflora/biflora.js" type="text/javascript"></script>
 		<!-- main.js -->
 		<script src="/common/main.js" type="text/javascript"></script>
