--- a/tests/htdocs/index.html
+++ b/tests/htdocs/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Baobab Framework</title>
+		<title>biflora</title>
 	</head>
 	<body>
 		<p>test page.</p>
