--- a/tests/htdocs/index.html
+++ b/tests/htdocs/index.html
@@ -8,6 +8,8 @@
 		<p>test page.</p>
 		<p><a href="javascript:;" onclick="window.main.socketTest(); return false;">PING</a></p>
 		<p><a href="javascript:;" onclick="window.main.socketSendFalse(); return false;">sending false</a></p>
+		<p><a href="javascript:;" onclick="window.main.broadcastTest(); return false;">broadcast</a></p>
+		<p><a href="javascript:;" onclick="window.main.joinRoom('a',1); return false;">join to room A</a> / <a href="javascript:;" onclick="window.main.sendToRoom('a',0); return false;">send</a> (<a href="javascript:;" onclick="window.main.joinRoom('a',0); return false;">leave</a>)</p>
 
 		<!-- socket.io -->
 		<script src="/socket.io/socket.io.js" type="text/javascript"></script>
